<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.justjava.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/coffeewood"
        android:contentDescription="@string/background_image" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/dark"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/shadowsintolight"
            android:text="@string/time_for_coffee"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            tools:targetApi="jelly_bean" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:maxLength="25" />

        <TextView
            style="@style/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/shadowsintolight"
            android:text="@string/quantity"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            tools:targetApi="jelly_bean" />

        <!--Increment / decrement buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/shape"
                android:onClick="decrement"
                android:text="@string/minusSym" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/qty"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/shape"
                android:onClick="increment"
                android:padding="8dp"
                android:text="@string/plusSym" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/shadowsintolight"
                android:text="@string/toppings"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:targetApi="jelly_bean" />
        </LinearLayout>

        <!--Whipped Cream button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp" />

            <TextView
                style="@style/dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/shadowsintolight"
                android:text="@string/whipped_cream"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:targetApi="jelly_bean" />
        </LinearLayout>

        <!--Chocolate Topping-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                style="@style/dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/shadowsintolight"
                android:text="@string/chocolate_drizzle"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:targetApi="jelly_bean" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/shape"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>
</RelativeLayout>
